objects/project_cloud__Stakeholder_Contact__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Charter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charter</label>
        <referenceTo>project_cloud__Charter__c</referenceTo>
        <relationshipLabel>Stakeholder Contacts</relationshipLabel>
        <relationshipName>Stakeholder_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stakeholder Contacts</relationshipLabel>
        <relationshipName>Stakeholder_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Email__c</fullName>
        <description>The email of the User or Contact</description>
        <formula>IF(NOT(ISBLANK(project_cloud__User__c)), project_cloud__User__r.Email, project_cloud__Contact__r.Email)</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Engagement__c</fullName>
        <formula>IF(
  ISPICKVAL(project_cloud__Power__c, &apos;High&apos;),
  IF(
    ISPICKVAL(project_cloud__Interest__c, &apos;High&apos;),
    &apos;Manage Closely&apos;,
    IF(
      ISPICKVAL(project_cloud__Interest__c, &apos;Low&apos;),
      &apos;Keep Satisfied&apos;,
      &apos;&apos;
    )
  ),
  IF(
    ISPICKVAL(project_cloud__Power__c, &apos;Low&apos;),
    IF(ISPICKVAL(project_cloud__Interest__c, &apos;High&apos;),
      &apos;Keep Informed&apos;,
      IF(
        ISPICKVAL(project_cloud__Interest__c, &apos;Low&apos;),
        &apos;Monitor&apos;,
        &apos;&apos;
      )
    ), &apos;&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Interest__c</fullName>
        <label>Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Mobile__c</fullName>
        <formula>IF(NOT(ISBLANK(project_cloud__User__c)), project_cloud__User__r.MobilePhone, project_cloud__Contact__r.MobilePhone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Name__c</fullName>
        <description>The name of the User or Contact.</description>
        <formula>IF(NOT(ISBLANK(project_cloud__User__c)), (project_cloud__User__r.FirstName &amp; &apos; &apos; &amp; project_cloud__User__r.LastName), (project_cloud__Contact__r.FirstName &amp; &apos; &apos; &amp; project_cloud__Contact__r.LastName))</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Phone__c</fullName>
        <description>The phone number of the User or Contact</description>
        <formula>IF(NOT(ISBLANK(project_cloud__User__c)), project_cloud__User__r.Phone, project_cloud__Contact__r.Phone)</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Power__c</fullName>
        <label>Power</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project this is related to.</description>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Stakeholder Contacts</relationshipLabel>
        <relationshipName>Stakeholder_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Customer User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stakeholder</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>project_cloud__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stakeholder_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stakeholder Contact</label>
    <nameField>
        <displayFormat>SC-{00000000}</displayFormat>
        <label>Stakeholder Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stakeholder Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>project_cloud__One_Contact_or_User</fullName>
        <active>true</active>
        <description>This object must lookup to a single User or Contact</description>
        <errorConditionFormula>IF(project_cloud__User__c == null, project_cloud__Contact__c == null, project_cloud__Contact__c != null)</errorConditionFormula>
        <errorMessage>Please select only one User or Contact</errorMessage>
    </validationRules>
</CustomObject>